--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: gray;
+  font-family: sans-serif;
+}
+
+h2 {
+  font-size:2rem;
   text-align: center;
+  margin-bottom: 20px;
+  color: #243747;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+  background-color: #243747;
+  width: 100%;
+  min-height: 80px;
+  display: flex;
+  justify-content:right
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar img {
+  width: 80px;
+  margin-top: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.to-do-list {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
+/*Lista de tareas*/
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-task {
+  width: 700px;
+  min-height: 400px;
+  background-color: #F9FBFB;
+  padding: 20px;
+  margin: 10px;
+  justify-content: center;
+  border-radius: 24px;
+  margin-top: 72px;
 }
